<resources>
    <string name="app_name">Medicine</string>
    <string name="home">Home</string>
    <string name="armadietto">Locker</string>
    <string name="archivio">Archive</string>
    <string name="armadietto_delle_medicine_vuoto">Medicine locker is empty</string>
    <string name="nessuna_medicina_in_archivio">No medicine on archive</string>
    <string name="add_medicine" translatable="false">add medicine</string>
    <string name="completa_tutti_campi">Missing fields</string>
    <string name="nessuna_nota">No memo</string>
    <string name="_0" translatable="false">0</string>
    <string name="aggiungi_all_armadietto">ADD NEW MEDICINE</string>
    <string name="nome">Name</string>
    <string name="tipo_di_medicina">Medicine type</string>
    <string name="confezioni_da_aggiungere">N° of packs</string>
    <string name="quantit_per_confezione">Quantity for pack</string>
    <string name="scadenza">Expiration</string>
    <string name="note">Memo</string>
    <string name="annulla">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="compresse">Tablets</string>
    <string name="bustine">Sachets</string>
    <string name="crema">Cream</string>
    <string name="sciroppo">Syrup</string>
    <string name="vari">Others</string>
    <string name="operazione_completata">Operation successfully complete</string>
    <string name="medicina_gia_presente">Medicine already exists</string>
    <string name="annullato">Operation canceled</string>
    <string name="tipo" translatable="false">Tipo</string>
    <string name="n" translatable="false">N</string>
    <string name="confezione_da">pack of</string>
    <string name="scade_il">expiration date</string>
    <string name="data_format">MM/dd/yyyy</string>
    <string name="totale">total:</string>
    <string name="confezioni">packs:</string>
    <string name="quantit_presenti_nell_armadietto">Quantity in the locker:</string>
    <string name="modifica">EDIT</string>
    <string name="cancella">DELETE</string>
    <string name="prendi_1">TAKE 1</string>
    <string name="add_to_home">ADD SHORTCUT TO HOME</string>
    <string name="archivia">ADD TO ARCHIVE</string>
    <string name="archiviato">ARCHIVED</string>
    <string name="aggiunto">Added on</string>
    <string name="archiviato_minuscolo">Archived on</string>
    <string name="si">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="sei_sicuro">Are you sure?</string>
    <string name="messaggio_cancella_medarchiviata">All information will be deleted</string>
    <string name="vedi_note">click for expand info</string>
    <string name="doppio_back">Press BACK key again to close the app</string>
    <string name="info_icon" translatable="false">info icon</string>
    <string name="info" translatable="false">INFO</string>
    <string name="privacy_policy" translatable="false"><a href="https://docs.google.com/document/d/e/2PACX-1vS2WPfrbLe3qtrvZ2tOjnwUZcTeEkTZrBRIstgASD6qSVKrn27FauOjPy4dnk_l-0BCTG3KM2aWF1Dq/pub">privacy policy</a></string>
    <string name="versione_app">APP version:</string>
    <string name="reset_armadietto">DELETE ALL LOCKER</string>
    <string name="reset_archivio">DELETE ALL ARCHIVE</string>
    <string name="home_vuota">No shortcuts added</string>
    <string name="avviso_reset_armadietto">If you confirm this operation, all medicines saved in your locker will be deleted. The process is irreversible</string>
    <string name="avviso_reset_archivio">If you confirm this operation the archive will be reset. The process is irreversible</string>
    <string name="rimuovi_da_home">REMOVE FROM HOME</string>
    <string name="nessuna_medicina_in_scadenza">No expiring medicine</string>
    <string name="in_scadenza">" is about to expire"</string>
    <string name="scaduto">" is expired"</string>
    <string name="data_hint">mm/dd/yyyy</string>
</resources>